add paragraph my best food, add list steps on how to cook my best food

--- a/Index.html
+++ b/Index.html
@@ -1,28 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 </head>
+
 <body>
     <div>
         <h1>JUDAH AKINLAJA BOLUWATIFE</h1>
         <p>
-            Akinlaja Judah, a seasoned Senior Software Engineer, has spent over a decade shaping the digital landscape of fintech and e-commerce. 
-            Currently at XYZ Tech, he is a driving force behind scalable, cutting-edge solutions that are transforming the way businesses handle digital transactions. 
-            John's career has been marked by a dedication to innovation, most notably demonstrated in his leadership role in developing a blockchain-based payment gateway that is redefining secure, 
+            Akinlaja Judah, a seasoned Senior Software Engineer, has spent over a decade shaping the digital landscape
+            of fintech and e-commerce.
+            Currently at XYZ Tech, he is a driving force behind scalable, cutting-edge solutions that are transforming
+            the way businesses handle digital transactions.
+            John's career has been marked by a dedication to innovation, most notably demonstrated in his leadership
+            role in developing a blockchain-based payment gateway that is redefining secure,
             efficient payments.
         </p>
-         
+
         <h2>MY HOBBIES</h2>
-        <ul>Reading</ul>
-        <ul>Video Games</ul>
-        <ul>Table Tennis</ul>
-        <ul>Exploring Space</ul>
-        <ul>Golf Sport</ul>
-        <ul>Writing</ul>
+
+        <ul>
+            <li>Reading</li>
+            <li>Video Games</li>
+            <li>Table Tennis</li>
+            <li>Exploring Space</li>
+            <li>Golf Sport</li>
+            <li>Writing</li>
+        </ul>
+
+        <h2>MY BEST FOOD</h2>
+
+        <p>Rice and Stew is a popular and versatile dish enjoyed in many parts of the world,
+            especially in Africa. It consists of plain boiled rice served with a flavorful tomato-based stew,
+            often enriched with spices, vegetables, and proteins such as chicken, beef, or fish.
+            The combination of tender rice and richly seasoned stew makes it a comfort food loved by many.
+        </p>
+
+        <ol>
+            <li>2 cups of rice</li>
+            <li>6 large tomatoes (or a can of tomato paste)</li>
+            <li>1 onion (chopped)</li>
+            <li>2-3 cloves of garlic (minced)</li>
+            <li>1-2 bell peppers (optional)</li>
+            <li>1-2 chili peppers (for spice)</li>
+            <li>2 tablespoons of vegetable oil</li>
+            <li>1 teaspoon of curry powder</li>
+            <li>1 teaspoon of thyme</li>
+            <li>Salt and pepper to taste</li>
+            <li>Protein (chicken, beef, or fish, as desired)</li>
+        </ol>
+
+        <h2>Steps to Cook Rice:</h2>
+
+        <ol>
+            <li>Rinse the rice: Rinse the rice thoroughly under cold water to remove excess starch.</li>
+            <li>Boil the rice: Bring a pot of water to a boil, add a pinch of salt, and then add the rice.
+            Cook for about 15-20 minutes until tender. Drain the water and set the rice aside.</li>
+        </ol>
+
+        <h3>Steps to Cook Stew:</h3>
+
+        <ol>
+            <li>Prepare the tomatoes: Blend the tomatoes, peppers (if using), and chili until smooth.</li>
+            <li>Fry onions and garlic: Heat oil in a pan and sauté the chopped onions and garlic until fragrant and golden.</li>
+            <li>Cook the tomatoes: Add the blended tomatoes to the pan and cook on medium heat. Stir occasionally and let it reduce until the raw tomato taste is gone (about 15-20 minutes).</li>
+            <li>Season the stew: Add curry powder, thyme, salt, and pepper. Adjust the seasoning to your taste.</li>
+            <li>Add protein: If using chicken, beef, or fish, fry or cook separately, then add to the stew and simmer for an additional 10 minutes to allow the flavors to combine.</li>
+            <li>Serve: Serve the stew hot over the boiled rice.</li>
+        </ol>
     </div>
-    
+
 </body>
+
 </html>
