introduce some bugs

--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
 
         <h2>MY BEST FOOD</h2>
 
-        <p>Rice and Stew is a popular and versatile dish enjoyed in many parts of the world,
+        <p>Rice and Stew and beans is a popular and versatile dish enjoyed in many parts of the world,
             especially in Africa. It consists of plain boiled rice served with a flavorful tomato-based stew,
             often enriched with spices, vegetables, and proteins such as chicken, beef, or fish.
             The combination of tender rice and richly seasoned stew makes it a comfort food loved by many.
@@ -62,6 +62,22 @@
         </ol>
 
         <h3>Steps to Cook Stew:</h3>
+
+        <h2>Steps to Cook Rice:</h2>
+
+        <ol>
+            <li>Rinse the rice: Rinse the rice thoroughly under cold water to remove excess starch.</li>
+            <li>Boil the rice: Bring a pot of water to a boil, add a pinch of salt, and then add the rice.
+            Cook for about 15-20 minutes until tender. Drain the water and set the rice aside.</li>
+        </ol>
+
+        <h2>Steps to Cook Rice:</h2>
+
+        <ol>
+            <li>Rinse the rice: Rinse the rice thoroughly under cold water to remove excess starch.</li>
+            <li>Boil the rice: Bring a pot of water to a boil, add a pinch of salt, and then add the rice.
+            Cook for about 15-20 minutes until tender. Drain the water and set the rice aside.</li>
+        </ol>
 
         <ol>
             <li>Prepare the tomatoes: Blend the tomatoes, peppers (if using), and chili until smooth.</li>
