--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div>
-        <h1>Amanda</h1>
+        <h1>JUDAH AKINLAJA BOLUWATIFE</h1>
         <p>
             Akinlaja Judah, a seasoned Senior Software Engineer, has spent over a decade shaping the digital landscape
             of fintech and e-commerce.
