--- a/Index.html
+++ b/Index.html
@@ -4,21 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
 
 <body>
     <div>
         <h1>BOLUWATIFE AKINLAJA JUDAH  SENIOR ENGINEER</h1>
-        <p>
-            Akinlaja Judah, a seasoned Senior Software Engineer, has spent over a decade shaping the digital landscape
+        <div>
+           <div>
+               <p>
+                <span class="subject">Computer Science</span>
+                <span class="description">Akinlaja Judah</span>
+            </p>
+           </div>
+            , a seasoned Senior Software Engineer, has spent over a decade shaping the digital landscape
             of fintech and e-commerce.
             Currently at XYZ Tech, he is a driving force behind scalable, cutting-edge solutions that are transforming
             the way businesses handle digital transactions.
             John's career has been marked by a dedication to innovation, most notably demonstrated in his leadership
             role in developing a blockchain-based payment gateway that is redefining secure,
             efficient payments.
-        </p>
+        </div>
 
         <h2>MY HOBBIES</h2>
 
