--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <form action="" method="POST">
         <label for="firstname">First Name</label>
         <input type="text" name="firstname" placeholder="First Name" value="amaobi" required > <br>
-        <label for="lastname">Last Name</label>
+        <label for="lastname">L ast Name</label>
         <input type="text" name="lastname" placeholder="Last Name"><br>
         <label for="password">Password</label>
         <input type="password" name="password"><br>
@@ -22,14 +22,14 @@
         <textarea name="description"></textarea><br> <br>
 
         <label for="vehicle">Select your vehicle</label><br>
-        <input type="checkbox" name="vehicle1" value="Mustang" checked> <label for="vehicle1"> I have a Mustang</label><br>
+        <input type="checkbox" name="vehicle1" value="Mustang"> <label for="vehicle1"> I have a Mustang</label><br>
         <input type="checkbox" name="vehicle2" value="Dodge"> <label for="vehicle2"> I have a Dodge</label><br>
         <input type="checkbox" name="vehicle3" value="Porshe"> <label for="vehicle3"> I have a Porshe</label> <br>
 
         <label for="Sex">Gender</label><br>
         <input type="radio" name="sex" value="Male" checked> <label for="male">Male</label>
         <input type="radio" name="sex" value="Female"> <label for="female">Female</label>
-        <input type="radio" name="sex" value="none"> <label for="female">Prefer not to say</label>
+        <input type="radio" name="sex" value="none"> <label for="none">Prefer not to say</label>
         <br>
         <label for="nationality">Nationality</label>
         <select name="nationality">
